@@ -74,6 +74,7 @@ Please visit http://aegisub.net to download latest version
   o The "Play" shortcut will always play, regardless of whether it was already playing or not. There is a new shortcut for "Stop".
   o Styles for line start/end markers have changed.
 - Fixed loading of SRT and TXT files, which were causing an empty line to appear at the start of the file. (AMZ)
+- Added options to toggle the display of the audio timeline and of the time over the mouse cursor. (AMZ)
 
 
 = 1.10 beta - 2006.08.07 ===========================
